# classix

./: .gitignore  ChangeLog  HACKING  LEIAME  Makefile.am  NEWS  ProjectHome.md  README  autogen.sh  classix  classix.in  classix.py  classix.ui  configure.ac
branches/debian/debian/: changelog  control  copyright
branches/maemo/: ChangeLog  Makefile.am  README  classix.in  configure.ac
branches/maemo/classix/: commandlineui.py
branches/maemo/data/: classix.desktop  classix.ui
branches/maemo/debian/: changelog  control  postinst  rules
branches/maemo/debian/patches/: 00list  01_hildon_menu.dpatch  01_makefile_am_hildon_menu.dpatch
branches/maemo/src/: main.py
branches/ubuntu/: AUTHORS  ChangeLog  Makefile.am  README  classix.in  configure.ac
branches/ubuntu/classix/: databasecreator.py
branches/ubuntu/data/: Makefile.am  classix.ui
branches/ubuntu/debian/: changelog  postinst  rules
branches/ubuntu/po/: POTFILES.in  pt_BR.po
branches/ubuntu/src/: main.py
classix/: Makefile.am  baseui.py  commandlineui.py  common.py  gtkui.py  hildonui.py  searchbackend.py
data/: CID10N4A.DIC  CID10N4A.INV  classix.desktop  classix.desktop.in  classix.ui
debian/: changelog  control  rules  watch
debian/patches/: 00list  02_makefile_in_hildon_menu.dpatch
po/: POTFILES.in  pt_BR.po
src/: classix.vala  main.py
tags/CLASSIX_0_1/data/: classix.db
tags/CLASSIX_0_2/: ChangeLog
tags/CLASSIX_0_2/src/: main.py
tags/CLASSIX_0_3/: autogen.sh
tags/CLASSIX_0_3_1/: ChangeLog
tags/CLASSIX_0_3_1/classix/: bagofwordscreator.py  hildonui.py
trunk/: ChangeLog  Makefile.am  NEWS  README  classix  classix.in  configure.ac
trunk/classix/: Makefile.am  gtkui.py  hildonui.py  main.py  searchbackend.py
trunk/data/: classix.ui
trunk/po/: pt_BR.po
trunk/src/: main.py
