# -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_INIT(classix, 0.1, http://code.google.com/p/classix/issues/list,
    ,http://code.google.com/p/classix/)
AC_CONFIG_SRCDIR(classix.in)
AM_INIT_AUTOMAKE
AM_MAINTAINER_MODE

AM_PATH_PYTHON(2.5)

# TODO: Check for dependencies
# TODO: Support Gettext

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
