## Process this file with automake to produce Makefile.in
## AUTOMAKE_OPTIONS = subdir-objects
SUBDIRS = bin classix data po

DISTCLEANFILES = \
	intltool-extract \
	intltool-merge   \
	intltool-update  \
	po/.intltool-merge-cache
	
EXTRA_DIST = \
	intltool-extract.in \
	intltool-merge.in   \
	intltool-update.in

## TODO: include debian/* files if they are found.
